--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="BrowseAssist">
 
 <head>
     <meta charset="UTF-8">
@@ -10,14 +10,21 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <link rel="stylesheet" href="lib/angular-tree-control/css/tree-control.css">
     <link rel="stylesheet" href="styles/main.css">
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" onload="window.$ = window.jQuery = module.exports;" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
+    <script src="https://unpkg.com/@uirouter/angularjs/release/angular-ui-router.min.js"></script>
+    <script src="lib/angular-tree-control/angular-tree-control.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" onload="window.$ = window.jQuery = module.exports;"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+
+    <script src="scripts/app.js"></script>
+
     <title>Browse-Assist Demo</title>
     <script>
         $(function () {
@@ -29,7 +36,7 @@
 <body>
     <div class="root-container">
         <div class="top-section">
-            <button class="btn btn-light btn-sm" data-toggle="tooltip" data-placement="bottom" title="Back">
+            <button onclick="window.history.back()" class="btn btn-light btn-sm" data-toggle="tooltip" data-placement="bottom" title="Back">
                 <i class="fas fa-arrow-left btn-sm"></i>
             </button>
             <button class="btn btn-light btn-sm" data-toggle="tooltip" data-placement="bottom" title="Forward">
@@ -48,35 +55,40 @@
                 <span>Ashish Chopra</span>
             </div>
             <div class="search-bar">
-                <input type="text"  placeholder="Search here">
+                <input type="text" placeholder="Search here">
                 <i class="fas fa-search"></i>
             </div>
         </div>
-        <div class="main-section">
-            <div class="navigator"></div>
+        <div class="main-section" ng-controller="RootController as rCtrl">
+            <div class="navigator">
+                <treecontrol class="tree-classic"
+                    tree-model="rCtrl.treeModel"
+                    options="rCtrl.treeOptions">
+                     {{node.name}}
+                 </treecontrol>
+            </div>
             <div class="explorer">
-
-                <img src="http://i.giphy.com/wXDsUTPWatTTq.gif" alt="">
+                <ui-view></ui-view>
             </div>
         </div>
         <div class="footer-section">
             <div>36 Items</div>
             <div class="spacer"></div>
             <div>
-                <!-- <div class="btn-group mr-2" role="group" aria-label="First group" data-toggle="buttons"> -->
-                <button type="button" class="btn btn-light btn-sm" data-toggle="tooltip" data-placement="top" title="Browse Assist View">
+                <button type="button" class="btn btn-light btn-sm"  data-toggle="tooltip"
+                    data-placement="top" title="Browse Assist View"
+                    ui-sref="assist" ui-sref-active="active">
                     <!-- <i class="fas fa-dharmachakra"></i> -->
                     <i class="devicon-webpack-plain"></i>
                 </button>
-                <button type="button" class="btn btn-light btn-sm active" data-toggle="tooltip" data-placement="top"
-                    title="Thumbnail View">
+                <button  type="button" class="btn btn-light btn-sm" data-toggle="tooltip" data-placement="top"
+                    title="Thumbnail View" ui-sref="home" ui-sref-active="active">
                     <i class="fas fa-th-large"></i>
                 </button>
                 <button type="button" class="btn btn-light btn-sm" data-toggle="tooltip" data-placement="top" title="List View">
                     <i class="fas fa-list-ul"></i>
                 </button>
             </div>
-            <!-- </div> -->
         </div>
     </div>
 </body>
