assist.js content removed

--- a/src/index.html
+++ b/src/index.html
@@ -14,20 +14,19 @@
     <link rel="stylesheet" href="styles/main.css">
 
     <!-- <script src="https://use.fontawesome.com/e27b6d4a31.js"></script> -->
-    
+
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
     <script src="https://unpkg.com/@uirouter/angularjs/release/angular-ui-router.min.js"></script>
     <script src="lib/angular-tree-control/angular-tree-control.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap.min.js"></script>
-<script>
+    <script src="lib/ui-bootstrap/ui-bootstrap-tpls-2.5.0.min.js"></script>
+    <script>
         function loadJSFromModuleIfExists() {
             if (module && module.exports) {
                 window.$ = window.jQuery = module.exports
             }
         }
     </script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" onload="loadJSFromModuleIfExists()" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
