--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
         crossorigin="anonymous">
@@ -23,11 +23,11 @@
             }
         }
     </script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" onload="loadJSFromModuleIfExists()" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="scripts/app.js"></script>
@@ -83,15 +83,15 @@
             <div>36 Items</div>
             <div class="spacer"></div>
             <div>
-                <button type="button" class="btn btn-light btn-sm" data-toggle="tooltip" data-placement="top" title="Browse Assist View"
+                <button type="button" class="btn btn-default btn-sm" data-toggle="tooltip" data-placement="top" title="Browse Assist View"
                     ng-click="rCtrl.changeView('assist')" ng-class="{'active': rCtrl.currentState == 'assist'}">
                     <i class="devicon-webpack-plain"></i>
                 </button>
-                <button type="button" class="btn btn-light btn-sm" data-toggle="tooltip" data-placement="top" title="Thumbnail View"
+                <button type="button" class="btn btn-default btn-sm" data-toggle="tooltip" data-placement="top" title="Thumbnail View"
                     ng-click="rCtrl.changeView('home')" ng-class="{'active': rCtrl.currentState == 'home'}">
                     <i class="fa fa-th-large"></i>
                 </button>
-                <button type="button" class="btn btn-light btn-sm" data-toggle="tooltip" data-placement="top" title="List View">
+                <button type="button" class="btn btn-default btn-sm" data-toggle="tooltip" data-placement="top" title="List View">
                     <i class="fa fa-list-ul"></i>
                 </button>
             </div>
